@@ -628,6 +628,8 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		* Fixed percentage display of available parts in the
 		  file-details dialog, where the decimal portion of the value
 		  would always be zero. This resolves bug #1060.
+		* Improved thread-safety of the AICH-sync thread on amuled,
+		  and prevented the possibility of deadlocks in a few cases.
 
 	xor:
 		* Fix for crash on amuled when starting up kademlia.
